examples/test/testpolicy15424.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15424
  namespace: namespace289
spec:
  podSelector:
    matchLabels:
      key7: value38
      key39: value7
      key41: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value41
          key44: value5
      podSelector:
        matchLabels:
          key26: value2
